--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
         </div>
       </div>
     </nav>
+    <!-- section1 -->
+    <div class="box1">
+      <img src="/img/box111.jpg" alt="">
+      <section class="inner">
+        <h2>Add a burst of excitement to your day</h2>
+        <p class="box1para">Become a Starbucks <sup>®</sup> Rewards member to collect Stars to earn free food, drinks & more.</p>
+        <div class="box1-button">  <button >join now</button> </div>
+       
+      </section>
+    </div> 
 
     <script src="script.js"></script>
   </body>
